force-app/main/default/objects/Intel_Talent_Profession__c/Intel_Talent_Profession__c.object-meta.xml
<CustomObject>
    <label>Intel Talent Profession</label>
    <nameField>
        <displayFormat>ITP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intel Talent Professions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>