force-app/main/default/objects/Intel_Talent_Profession__c/fields/Intel_Profession__c.field-meta.xml
<CustomField>
    <fullName>Intel_Profession__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intel Profession</label>
    <referenceTo>Intel_Profession__c</referenceTo>
    <relationshipLabel>Intel Talent Professions</relationshipLabel>
    <relationshipName>Intel_Talent_Professions</relationshipName>
    <type>Lookup</type>
</CustomField>