force-app/main/default/objects/Intel_Talent_Profession__c/fields/Profession_Class__c.field-meta.xml
<CustomField>
    <fullName>Profession_Class__c</fullName>
    <formula>Intel_Profession__r.Class_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profession Class</label>
    <type>Text</type>
</CustomField>