force-app/main/default/objects/Intel_Talent_Profession__c/fields/Profession_Group__c.field-meta.xml
<CustomField>
    <fullName>Profession_Group__c</fullName>
    <formula>Intel_Profession__r.Group_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profession Group</label>
    <type>Text</type>
</CustomField>