force-app/main/default/objects/Intel_Talent_Profession__c/fields/Torc_User__c.field-meta.xml
<CustomField>
    <fullName>Torc_User__c</fullName>
    <label>Torc User</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipLabel>Intel Talent Professions</relationshipLabel>
    <relationshipName>Intel_Talent_Professions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>